syntax = "proto3";

option go_package = "genprotos/";

package task;

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
    rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
    rpc GetByIdTask(GetByIdTaskRequest) returns (GetByIdTaskResponse) {}
    rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse) {}
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string status = 3;
    string assigned_to = 4;
    string due_date = 5;
}

message CreateTaskResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string assigned_to = 5;
    string due_date = 6;
}

message UpdateTaskRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string assigned_to = 5;
    string due_date = 6;
}

message UpdateTaskResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string assigned_to = 5;
    string due_date = 6;
    string updated_at = 7;
}

message GetByIdTaskRequest {
    string id = 1;
}

message GetByIdTaskResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string assigned_to = 5;
    string due_date = 6;
}

message GetAllTasksRequest {
    int32 limit = 1;
    int32 page = 2;
}

message GetAllTasksResponse {
    repeated GetByIdTaskResponse tasks = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message DeleteTaskResponse {}
